objects/Holidays__c.object
<CustomObject>
    <label>Holidays</label>
    <nameField>
        <label>Holidays Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School</label>
        <referenceTo>School__c</referenceTo>
        <relationshipLabel>Holidays</relationshipLabel>
        <relationshipName>Holidays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF(
  AND(
    NOT(ISBLANK(StartDate__c)),
    NOT(ISBLANK(EndDate__c))
  ),
  (EndDate__c - StartDate__c) + 1,
  NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HolidayDate__c</fullName>
        <inlineHelpText>Use for single-day holidays.</inlineHelpText>
        <label>Holiday Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HolidayType__c</fullName>
        <label>Holiday Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>School Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>End_Date_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(StartDate__c)) &amp;&amp; 
NOT(ISBLANK(EndDate__c)) &amp;&amp; 
EndDate__c &lt; StartDate__c</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>The End Date cannot be earlier than the Start Date.</errorMessage>
    </validationRules>
</CustomObject>